# rsna-cervical-spine-detection

./: README.md  RNSA.html  pyproject.toml
Algorithm/: Feature Detection.ipynb
Algorithm/.ipynb_checkpoints/: Feature Detection-checkpoint.ipynb
EDA/: RNSA.ipynb
EDA/.ipynb_checkpoints/: RNSA-checkpoint.ipynb
Research/: IntrinsicDepsCTVoxelGray  Notes.md
