[tool.poetry]
name = "rsna-cervical-spine-detection"
version = "0.1.0"
description = ""
authors = ["Elizabeth Willard <elizabeth-willard@idexx.com>"]
readme = "README.md"
packages = [{include = "rsna_cervical_spine_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
nibabel = "^5.1.0"
numpy = "^1.24.3"
ipykernel = "^6.23.1"
pandas = "^2.0.1"
python-gdcm = "^3.0.22"
pylibjpeg = "^1.4.0"
pydicom = "^2.3.1"
timm = "^0.9.2"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
